--- a/Preparation_1/Yavor/prapare_1/site.css
+++ b/Preparation_1/Yavor/prapare_1/site.css
@@ -375,112 +375,50 @@ footer {
     font-size: 16px;
 }
 
-.parent1{
-    margin: 5px;
-    padding: 10px 10px;
-    text-align: center;
+.carousel {
+    position: relative;
+    width: 600px;
+    height: 400px;
+    overflow: hidden;
+    margin-left: 26%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.slideshow-container {
-    max-width: 1300px;
-    height: 400px;
-    position: relative;
-    margin: 0 auto;
-    padding: 10px 10px;
-
-    display: inline-block;
-
-
-  }
-
-
-  .mySlides {
-    display: inline;
-
-  }
-
-  #image-slide{
-      width: 700px;
-      height: 400px;
-  }
-
-  img{
-    vertical-align: center;
-    border-radius: 6px;
-    
-    
-  }
-
-
-  .prev, .next {
-    cursor: pointer;
-    position: relative;
-    top: 50%;
-    width: auto;
-    margin-top: -20px;
-    padding: 16px;
-    color: rgb(79, 79, 79);
-    font-weight: bold;
-    font-size: 20px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-  }
-
-
-  .next {
-    right: 310px;
-    border-radius: 5px;
-    display: block;
-    float: right;
-    top: 190px;
-  }
-
-  .prev{
-    left: 300px;
-    border-radius: 5px;
-    display: block;
-    float: left;
-    top: 190px;
-  }
-
- 
-
-  .text {
-    color: rgb(0, 0, 0);
-    font-size: 190%;
-    padding: 10px;
-    position: absolute;
-    width: 95%;
-    text-align: center;
-    bottom: -10px;  background-color: #d5cd6d;
-  
-  }
-
-
-  .numbertext {
-    color: rgb(0, 0, 0);
-    font-size: 12px;
-    padding: 8px 12px;
+.carousel img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     position: absolute;
     top: 0;
-    background-color:#E39774;
-  }
+    left: 0;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
 
+.carousel img.active {
+    opacity: 1;
+}
 
-  .dot {
+.carousel .arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px;
     cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-    align-content: center;
+    font-size: 24px;
+    z-index: 10;
+}
 
-  }
+.carousel .arrow.left {
+    left: 10px;
+}
 
-  .active, .dot:hover {
-    background-color: #717171;
-  }
+.carousel .arrow.right {
+    right: 10px;
+}
