--- a/Preparation_1/Yavor/prapare_1/site.css
+++ b/Preparation_1/Yavor/prapare_1/site.css
@@ -380,12 +380,27 @@ footer {
     width: 600px;
     height: 400px;
     overflow: hidden;
-    margin-left: 26%;
+    margin-left: 25%;
     margin-top: 3%;
     margin-bottom: 3%;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
+@media (max-width: 980px) {
+ 
+    .carousel {
+        position: relative;
+        width: 600px;
+        height: 400px;
+        overflow: hidden;
+        margin-left: 20%;
+        margin-top: 3%;
+        margin-bottom: 3%;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+    }
+
 
 .carousel img {
     width: 100%;
