--- a/Preparation_2/index.css
+++ b/Preparation_2/index.css
@@ -20,8 +20,8 @@ header {
  }
 
 .dropdown {
-    margin-left: 4%;
-    margin-right: 2%;
+    margin-left: 6%;
+    margin-right: 3%;
     position: relative;
     display: inline-block;
 }
@@ -50,6 +50,7 @@ header {
 background-color: rgb(237, 196, 62);
 display: block;
 }
+
 .footer {
     display: flex;
     flex-direction: row;
@@ -64,5 +65,7 @@ display: block;
     background-color: rgb(237, 196, 62);
     border: solid;
     padding: 45%;
+    padding-left: 60%;
+    padding-right: 60%;
     border-radius: 100%;
 }
