--- a/Preparation_2/index.css
+++ b/Preparation_2/index.css
@@ -50,7 +50,9 @@ header {
 background-color: rgb(237, 196, 62);
 display: block;
 }
-.footer {
+
+
+footer {
     display: flex;
     flex-direction: row;
     align-items: center;
