added border bottom to header

--- a/Preparation_2/index.css
+++ b/Preparation_2/index.css
@@ -3,6 +3,8 @@ header {
     flex-direction: row;
     align-items: center;
     background-color: rgb(237, 196, 62);
+    border-bottom: 5px solid rgb(234, 183, 15);
+    margin-bottom: 50px;
 }
 
 #input_box {
