--- a/Preparation_2/signup.css
+++ b/Preparation_2/signup.css
@@ -1,3 +1,6 @@
+body{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 body {
     display: flex;
     justify-content: center;
