--- a/Preparation_2/index.css
+++ b/Preparation_2/index.css
@@ -82,44 +82,46 @@ background-color: rgb(237, 196, 62);
 display: block;
 }
 
-#carousel-container{
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-bottom: 5%;
-    padding: 4% 4% 4% 4%;
+#carousel-container {
+    margin: 5%;
+    padding: 4%;
     background-color: rgb(237, 196, 62);
     border-radius: 10px;
+    overflow: hidden;
 }
 
-.slide
-{
-    display:flex;
+.slide {
+    display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 3%;
     flex-wrap: nowrap;
+    margin-bottom: 20px;
 }
 
-.car_link{
-    max-width: 40%;
-    height: auto;
+.car_link {
+    width: 45%;
     display: block;
 }
 
-.car_picture{
+.car_picture {
     width: 100%;
-    max-width: 1000px;
+    max-width: 250px;
     height: auto;
+    border-radius: 5px;
 }
 
-.bookinfo{
+.bookinfo {
     flex: 1;
     display: block;
 }
 
-#s1
-{
-    display: block;
+.bookinfo h1 {
+    margin: 0;
+    font-size: 3.5em;
+}
+
+.bookinfo p {
+    font-size: 2em;
 }
 
 footer {
