--- a/Preparation_2/categ1.css
+++ b/Preparation_2/categ1.css
@@ -1,8 +1,11 @@
 body { 
     font-family: Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
+    background-color: rgb(237, 196, 62)
+    
 }
 
 .bel {
@@ -89,6 +92,157 @@ body {
 .snimka4 {
     height: 110%;
     width: 100%;
+}
+
+header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: rgb(237, 196, 62);
+    border-bottom: 5px solid rgb(234, 183, 15);
+    margin-bottom: 50px;
+}
+
+#input_box {
+    padding: 5px;
+    font-size: 16px;
+    border: none;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+}
+
+#logo
+{
+    margin-left: 4%;
+}
+
+#name{
+    margin-right: 46%;
+    font-size: 190%;
+ }
+
+.dropdown {
+    margin-right: 3%;
+    position: relative;
+    display: inline-block;
+}
+
+
+.dropdown-content {
+    display: none;
+    background-color: rgb(192, 146, 60);
+    min-width: 160px;
+    position: absolute;
+    border: none;
+    text-align: center;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.dropdown-content a {
+    color: rgb(78, 57, 30); /* Или друг цвят, който да пасва на дизайна */
+    text-decoration: none; /* Премахва подчертаването */
+    display: block;
+    padding: 5px 10px;
+}
+
+.dropdown-content a:hover {
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.dropdown_button
+{
+    font-size: 120%;
+    background-color: rgb(237, 196, 62);
+    border:none;
+}
+
+#search_icon
+{
+    padding: 0.43%;
+    margin-left: 0;
+    border-width: 0.1%;
+    background-color: rgb(255, 255, 255);
+    margin-right: 4%;
+    border-top-right-radius: 50%;
+    border-bottom-right-radius: 50%;
+}
+
+.dropdown:hover .dropdown-content{
+background-color: rgb(237, 196, 62);
+display: block;
+}
+
+#carousel-container{
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 5%;
+    padding: 4% 4% 4% 4%;
+    background-color: rgb(237, 196, 62);
+    border-radius: 10px;
+}
+
+.slide
+{
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 3%;
+    flex-wrap: nowrap;
+}
+
+.car_link{
+    max-width: 40%;
+    height: auto;
+    display: block;
+}
+
+.car_picture{
+    width: 100%;
+    max-width: 1000px;
+    height: auto;
+}
+
+.bookinfo{
+    flex: 1;
+    display: block;
+}
+
+#s1
+{
+    display: block;
+}
+
+footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: rgb(237, 196, 62);
+    border-top: 5px solid rgb(234, 183, 15);
+    padding-left: 5%;
+    padding-right: 5%;
+    justify-content: space-between;
+}
+
+.footerlink{
+    color: inherit;
+    text-decoration: none;
+}
+
+.footerlink:hover{
+    text-decoration: underline;
+}
+
+.profile
+{
+    background-color: rgb(237, 196, 62);
+    border: solid;
+    padding: 45%;
+    padding-left: 60%;
+    padding-right: 60%;
+    border-radius: 100%;
 }
 
 
