--- a/Preparation_2/categ2.css
+++ b/Preparation_2/categ2.css
@@ -1,8 +1,10 @@
 body { 
     font-family: Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
+    background-color: rgb(237, 196, 62)
 }
 
 .bel {
@@ -55,7 +57,7 @@ body {
 .text3{
     text-align: center;
     width: 100%;
-    margin-top: 14%;
+    margin-top: 8.5%;
 }
 
 
@@ -77,16 +79,16 @@ body {
 }
 
 .snimka2 {
-    height: 104%;
+    height: 104.5%;
     width: 100%;
 }
 
 .snimka3 {
-    height: 118%;
+    height: 109.5%;
     width: 100%;
 }
 
 .snimka4 {
-    height: 110%;
+    height: 102%;
     width: 100%;
 }
