--- a/Preparation_2/index.css
+++ b/Preparation_2/index.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
 header {
     display: flex;
     flex-direction: row;
@@ -25,14 +26,13 @@ header {
 
 #name{
     margin-right: 46%;
- }
+}
 
 .dropdown {
     margin-right: 3%;
     position: relative;
     display: inline-block;
 }
-
 
 .dropdown-content {
     display: none;
@@ -81,7 +81,7 @@ background-color: rgb(237, 196, 62);
 display: block;
 }
 
-#carousel-container {
+.carousel {
     margin: 5%;
     padding: 4%;
     background-color: rgb(237, 196, 62);
@@ -92,35 +92,43 @@ display: block;
 .slide {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    justify-content:space-evenly;
+    align-items: center; 
     flex-wrap: nowrap;
     margin-bottom: 20px;
+    width: 100%;
+    gap: 10%;
 }
 
 .car_link {
-    width: 45%;
-    display: block;
+    width: 25%;
+    height:auto;
 }
 
 .car_picture {
-    width: 100%;
-    max-width: 250px;
-    height: auto;
+    max-width: 100%; /* Make the image responsive */
+    width: 100%; /* Make sure the image fills the container */
+    object-fit: contain; /* Ensure the image doesn't stretch/distort */
     border-radius: 5px;
 }
 
 .bookinfo {
-    flex: 1;
-    display: block;
+    flex-grow: 1;
+    padding-left: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%; 
+    box-sizing: border-box; 
 }
 
 .bookinfo h1 {
     margin: 0;
-    font-size: 3.5em;
+    font-size: 2.5em; 
 }
 
 .bookinfo p {
-    font-size: 2em;
+    font-size: 1.5em; 
 }
 
 footer {
