--- a/Preparation_2/index.css
+++ b/Preparation_2/index.css
@@ -1,13 +1,21 @@
-body{
+body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding-top: 80px;
 }
+
 header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     background-color: rgb(237, 196, 62);
-    border-bottom: 5px solid rgb(234, 183, 15);
-    margin-bottom: 50px;
+    padding: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    height: 10%;
+    z-index: 1000;
+    
 }
 
 #input_box {
@@ -18,14 +26,13 @@ header {
     border-bottom-left-radius: 50px;
 }
 
-#logo
-{
+#logo {
     margin-left: 4%;
 }
 
-#name{
+#name {
     margin-right: 45%;
- }
+}
 
 .dropdown {
     margin-right: 3%;
@@ -36,7 +43,7 @@ header {
 
 .dropdown-content {
     display: none;
-    background-color: rgb(192, 146, 60);
+    background-color: rgb(237, 196, 62);
     min-width: 160px;
     position: absolute;
     border: none;
@@ -48,8 +55,10 @@ header {
 }
 
 .dropdown-content a {
-    color: rgb(78, 57, 30); /* Или друг цвят, който да пасва на дизайна */
-    text-decoration: none; /* Премахва подчертаването */
+    color: rgb(78, 57, 30);
+    /* Или друг цвят, който да пасва на дизайна */
+    text-decoration: none;
+    /* Премахва подчертаването */
     display: block;
     padding: 5px 10px;
 }
@@ -58,16 +67,14 @@ header {
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
 }
 
-.dropdown_button
-{
+.dropdown_button {
     font-size: 120%;
     background-color: rgb(237, 196, 62);
-    border:none;
+    border: none;
 }
 
-#search_icon
-{
-    padding: 0.43%;
+#search_icon {
+    padding: 0.45%;
     margin-left: 0;
     border-width: 0.1%;
     background-color: rgb(255, 255, 255);
@@ -76,9 +83,9 @@ header {
     border-bottom-right-radius: 50%;
 }
 
-.dropdown:hover .dropdown-content{
-background-color: rgb(237, 196, 62);
-display: block;
+.dropdown:hover .dropdown-content {
+    background-color: rgb(237, 196, 62);
+    display: block;
 }
 
 #carousel-container {
@@ -134,17 +141,16 @@ footer {
     justify-content: space-between;
 }
 
-.footerlink{
+.footerlink {
     color: inherit;
     text-decoration: none;
 }
 
-.footerlink:hover{
+.footerlink:hover {
     text-decoration: underline;
 }
 
-.profile
-{
+.profile {
     background-color: rgb(237, 196, 62);
     border: solid;
     padding: 45%;
