--- a/Preparation_2/categ1.css
+++ b/Preparation_2/categ1.css
@@ -66,6 +66,10 @@ body {
     margin-bottom: 15%;
 }
 
+#zaglavie3{
+    margin-top: -10.5%;
+}
+
 .snimka, .snimka2, .snimka3, .snimka4 {
     width: 90%;
     height: auto; /* Запазва пропорциите на изображенията */
@@ -80,17 +84,17 @@ body {
 }
 
 .snimka2 {
-    height: 105%;
+    height: 115%;
     width: 100%;
 }
 
 .snimka3 {
-    height: 118%;
+    height: 96%;
     width: 100%;
 }
 
 .snimka4 {
-    height: 110%;
+    height: 96%;
     width: 100%;
 }
 
@@ -194,6 +198,15 @@ display: block;
     padding-left: 60%;
     padding-right: 60%;
     border-radius: 100%;
+}
+
+#zaglavie2{
+    margin-top: 25%;
+}
+
+
+#zaglavie4{
+    margin-top: -4%;
 }
 
 
