--- a/Preparation_2/categ1.css
+++ b/Preparation_2/categ1.css
@@ -4,7 +4,8 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
-    background-color: rgb(237, 196, 62)
+    background-color: rgb(237, 196, 62);
+    padding-top: 80px;
     
 }
 
@@ -12,7 +13,7 @@ body {
     text-align: center;
     font-size: 300%;
     margin-bottom: 0;
-    margin-top: 10%;
+    margin-top: 3%;
 }
 
 .category {
