--- a/Preparation_2/categ2.css
+++ b/Preparation_2/categ2.css
@@ -4,14 +4,15 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
-    background-color: rgb(237, 196, 62)
+    background-color: rgb(237, 196, 62);
+    padding-top: 80px;
 }
 
 .bel {
     text-align: center;
     font-size: 300%;
     margin-bottom: 0;
-    margin-top: 10%;
+    margin-top: 3%;
 }
 
 .category {
