--- a/Preparation_2/index.css
+++ b/Preparation_2/index.css
@@ -144,6 +144,30 @@ header {
     background-color: rgb(255, 225, 128);
 }
 
+.box-navbutt{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 15px;
+    justify-content: space-between;
+    bottom: 2%;
+    width: max-content;
+    margin-left: 50%;
+    transform: translateX(-50%);
+}
+
+.navbutt{
+    background-color: rgba(69, 69, 69, 0.321);
+    border: none;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+}
+
+.navbutt:hover{
+    background-color: rgba(69, 69, 69, 0.786);
+}
+
 .slide {
     display: flex;
     flex-direction: row;
@@ -161,9 +185,9 @@ header {
 }
 
 .car_picture {
-    max-width: 100%; /* Make the image responsive */
-    width: 100%; /* Make sure the image fills the container */
-    object-fit: contain; /* Ensure the image doesn't stretch/distort */
+    max-width: 100%;
+    width: 100%;
+    object-fit: contain;
     border-radius: 5px;
 }
 
