--- a/Preparation_2/index.css
+++ b/Preparation_2/index.css
@@ -96,92 +96,28 @@ header {
     position: relative;
     padding-left: 13%;
     padding-right: 13%;
-}
-
-#prev
-{
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: white;
-    color: black;
-    font-size: 2em;
-    border: none;
-    padding: 8px;
-    cursor: pointer;
-    z-index: 10;
-    border-radius: 50%;
-    left: 5%;
-    height: 60px;
-    width: 60px;
-
-}
-
-#next
-{
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: white;
-    color: black;
-    font-size: 2em;
-    border: none;
-    padding: 8px;
-    cursor: pointer;
-    z-index: 10;
-    border-radius: 50%;
-    right: 5%;
-    height: 60px;
-    width: 60px;
-
-}
-
-#prev:hover{
-    background-color: rgb(255, 225, 128);
-}
-
-#next:hover{
-    background-color: rgb(255, 225, 128);
-}
-
-.box-navbutt{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    gap: 15px;
-    justify-content: space-between;
-    bottom: 2%;
-    width: max-content;
-    margin-left: 50%;
-    transform: translateX(-50%);
-}
-
-.navbutt{
-    background-color: rgba(69, 69, 69, 0.321);
-    border: none;
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-}
-
-.navbutt:hover{
-    background-color: rgba(69, 69, 69, 0.786);
+    aspect-ratio: 16/9;
 }
 
 .slide {
     display: flex;
     flex-direction: row;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
     align-items: center; 
     flex-wrap: nowrap;
     margin-bottom: 20px;
     width: 100%;
-    gap: 10%;
+    gap: 7%;
+    position: absolute;
+    transition: transform 0.5s ease-in-out;
+    height: fit-content;
+    overflow: hidden;
+    padding-right: 5%;
 }
 
 .car_link {
     width: 25%;
-    height:auto;
+    height: auto;
 }
 
 .car_picture {
@@ -193,12 +129,14 @@ header {
 
 .bookinfo {
     flex-grow: 1;
-    padding-left: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    width: 50%; 
-    box-sizing: border-box; 
+    justify-content: center; 
+    width: 40%; 
+    box-sizing: border-box;
+    overflow: hidden; 
+    height: 100%;
+    margin-right: 30%;
 }
 
 .bookinfo h1 {
@@ -208,6 +146,65 @@ header {
 
 .bookinfo p {
     font-size: 1.5em; 
+    white-space: normal;
+    overflow: hidden;
+}
+
+#prev, #next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: white;
+    color: black;
+    font-size: 2em;
+    border: none;
+    padding: 8px;
+    cursor: pointer;
+    z-index: 10;
+    border-radius: 50%;
+    height: 60px;
+    width: 60px;
+}
+
+#prev {
+    left: 5%;
+}
+
+#next {
+    right: 5%;
+}
+
+#prev:hover, #next:hover {
+    background-color: rgb(255, 225, 128);
+}
+
+.box-navbutt {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 15px;
+    justify-content: center;
+    position: absolute; 
+    bottom: 3%;
+    left: 50%; 
+    transform: translateX(-50%); 
+    z-index: 5; 
+}
+
+.navbutt{
+    background-color: rgba(69, 69, 69, 0.321);
+    border: none;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+}
+
+.navbutt:hover {
+    background-color: rgba(69, 69, 69, 0.786);
+}
+
+.navbutt.active {
+    background-color: rgba(69, 69, 69, 0.786);
 }
 
 footer {
