--- a/Preparation_2/index.css
+++ b/Preparation_2/index.css
@@ -18,6 +18,23 @@ header {
     
 }
 
+.home_page{
+     display: flex;
+     flex-direction: column;
+     justify-content: space-between;
+}
+
+.TOP-books
+{
+    border: none;
+    border-radius: 10px;
+    background-color:  rgb(237, 196, 62);
+    margin-bottom: 3%;
+    padding: 2%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
 #input_box {
     padding: 5px;
     font-size: 16px;
