--- a/Preparation_2/index.css
+++ b/Preparation_2/index.css
@@ -35,6 +35,16 @@ header {
     margin-right: 5%;
 }
 
+.section3{
+    border: none;
+    border-radius: 10px;
+    background-color:  rgb(237, 196, 62);
+    margin-bottom: 3%;
+    padding: 2%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
 #input_box {
     padding: 5px;
     font-size: 16px;
