--- a/Preparation_2/index.css
+++ b/Preparation_2/index.css
@@ -24,23 +24,16 @@ header {
      justify-content: space-between;
 }
 
-.TOP-books
-{
-    border: none;
-    border-radius: 10px;
-    background-color:  rgb(237, 196, 62);
-    margin-bottom: 3%;
-    padding: 2%;
-    margin-left: 5%;
-    margin-right: 5%;
-}
+
 
 .section3{
     border: none;
     border-radius: 10px;
     background-color:  rgb(237, 196, 62);
-    margin-bottom: 3%;
-    padding: 2%;
+    margin-bottom: 5%;
+    padding: 5%;
+    padding-top: 3%;
+    padding-bottom: 3%;
     margin-left: 5%;
     margin-right: 5%;
 }
@@ -112,6 +105,15 @@ header {
 .dropdown:hover .dropdown-content {
     background-color: rgb(237, 196, 62);
     display: block;
+}
+
+.profile {
+    background-color: rgb(237, 196, 62);
+    border: solid;
+    padding: 45%;
+    padding-left: 60%;
+    padding-right: 60%;
+    border-radius: 100%;
 }
 
 .carousel {
@@ -234,12 +236,31 @@ header {
     background-color: rgba(69, 69, 69, 0.786);
 }
 
+.TOP-books
+{
+    border: none;
+    border-radius: 10px;
+    background-color:  rgb(237, 196, 62);
+    margin-bottom: 8%;
+    padding: 1%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 3%;
+}
+
+.TOP-books h1{
+    margin-left: 3%;
+    margin-top: 3%;
+    margin-bottom: 2%;
+}
+
 .category {
     display: flex;
-    justify-content: center;
-    padding: 1%;
+    justify-content: space-evenly;
+    padding: 0%;
     margin-top: 3%;
     flex-wrap: wrap;
+    padding-bottom: 2%;
 }
 
 .conteiner{
@@ -248,8 +269,17 @@ header {
     flex-direction: column;
     align-items: center;
     width: 20%;
-    background-color: #d0d0d0;
-    padding: 3%;
+    background-color: white;
+    padding: 0.5%;
+    text-decoration: none;
+    color: black;
+}
+
+.snimka{
+    max-width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5%;
 }
 
 footer {
@@ -272,11 +302,3 @@ footer {
     text-decoration: underline;
 }
 
-.profile {
-    background-color: rgb(237, 196, 62);
-    border: solid;
-    padding: 45%;
-    padding-left: 60%;
-    padding-right: 60%;
-    border-radius: 100%;
-}
