--- a/Preparation_2/index.css
+++ b/Preparation_2/index.css
@@ -263,6 +263,41 @@ footer {
     justify-content: space-between;
 }
 
+#navi {
+    flex-direction: column;
+    width: 20%;
+ 
+}
+
+#info {
+    display: flex;
+    flex-direction: column;
+    width: 35%;
+    margin-left: 29%;
+    margin-right: 1%;
+    text-align:center;
+}
+
+#info2
+{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    margin-left: 36%;
+}
+
+#footer_button {
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#footer_button:hover {
+    color: #343131;
+    text-decoration: underline;
+}
+
+
 .footerlink {
     color: inherit;
     text-decoration: none;
