--- a/Preparation_2/index.css
+++ b/Preparation_2/index.css
@@ -238,6 +238,7 @@ header {
 
 .TOP-books
 {
+    text-align: center;
     border: none;
     border-radius: 10px;
     background-color:  rgb(237, 196, 62);
@@ -290,7 +291,6 @@ footer {
     border-top: 5px solid rgb(234, 183, 15);
     padding-left: 5%;
     padding-right: 5%;
-    justify-content: space-between;
 }
 
 #navi {
@@ -300,11 +300,9 @@ footer {
 }
 
 #info {
-    display: flex;
     flex-direction: column;
-    width: 35%;
-    margin-left: 29%;
-    margin-right: 1%;
+    margin-left: 9%;
+    margin-right: 0.5%;
     text-align:center;
 }
 
@@ -312,8 +310,15 @@ footer {
 {
     display: flex;
     flex-direction: row;
+    color: rgb(26, 20, 20);
     text-align: center;
-    margin-left: 36%;
+    margin-left: 29%;
+}
+
+#info3{
+    flex-direction: column;
+    margin-left: 12%;
+    text-align:center;
 }
 
 #footer_button {
