--- a/Preparation_2/categ1.css
+++ b/Preparation_2/categ1.css
@@ -48,3 +48,64 @@ body {
     margin-left: 5%;
 }
 
+footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: rgb(237, 196, 62);
+    border-top: 7px solid rgb(234, 183, 15);
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 2%;
+}
+
+#navi {
+    flex-direction: column;
+    width: 20%;
+ 
+}
+
+#info {
+    flex-direction: column;
+    margin-left: 9%;
+    margin-right: 0.5%;
+    text-align:center;
+}
+
+#info2
+{
+    display: flex;
+    flex-direction: row;
+    color: rgb(26, 20, 20);
+    text-align: center;
+    margin-left: 29%;
+}
+
+#info3{
+    flex-direction: column;
+    margin-left: 12%;
+    text-align:center;
+}
+
+#footer_button {
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#footer_button:hover {
+    color: #343131;
+    text-decoration: underline;
+}
+
+
+.footerlink {
+    color: inherit;
+    text-decoration: none;
+}
+
+.footerlink:hover {
+    text-decoration: underline;
+}
+
+
