--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,27 +1,31 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Signup</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <h2>Login</h2>
-    <form action="/login" method="POST">
+    <h2>Signup</h2>
+    <form action="/signup" method="POST">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required><br><br>
+
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required><br><br>
 
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required><br><br>
 
-        <button type="submit">Login</button>
+        <button type="submit">Sign Up</button>
     </form>
 
     <% if (message) { %>
     <p><%= message %></p>
     <% } %>
 
-    <a href="/signup">Don't have an account? Sign up here</a>
+    <a href="/login">Already have an account? Login here</a>
 </body>
 </html>
