--- a/Preparation_2/index.css
+++ b/Preparation_2/index.css
@@ -190,7 +190,7 @@ header {
     padding: 8px;
     cursor: pointer;
     z-index: 10;
-    border-radius: 50%;
+    border-radius: 15%;
     height: 60px;
     width: 60px;
 }
@@ -223,7 +223,7 @@ header {
 .navbutt{
     background-color: rgba(69, 69, 69, 0.321);
     border: none;
-    border-radius: 50%;
+    border-radius: 15%;
     width: 20px;
     height: 20px;
 }
@@ -293,6 +293,8 @@ header {
     padding-left: 13%;
     padding-right: 13%;
     aspect-ratio: 16/9;
+    text-decoration: none;
+    color: black;
 }
 
 .slide-2 {
@@ -357,7 +359,7 @@ header {
     padding: 8px;
     cursor: pointer;
     z-index: 10;
-    border-radius: 50%;
+    border-radius: 15%;
     height: 60px;
     width: 60px;
 }
@@ -390,7 +392,7 @@ header {
 .navbutt-2{
     background-color: rgba(69, 69, 69, 0.321);
     border: none;
-    border-radius: 50%;
+    border-radius: 15%;
     width: 20px;
     height: 20px;
 }
