Second sextuple Carousel completed with titles and headers!

--- a/Preparation_2/index.css
+++ b/Preparation_2/index.css
@@ -284,7 +284,9 @@ header {
 }
 
 .carousel-2 {
-    margin: 5%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 5%;
     padding: 4%;
     background-color: rgb(237, 196, 62);
     border-radius: 10px;
@@ -292,9 +294,7 @@ header {
     position: relative;
     padding-left: 13%;
     padding-right: 13%;
-    aspect-ratio: 16/9;
-    text-decoration: none;
-    color: black;
+    aspect-ratio: 16/4.3;
 }
 
 .slide-2 {
@@ -304,13 +304,13 @@ header {
     align-items: center; 
     flex-wrap: nowrap;
     margin-bottom: 20px;
-    width: 100%;
     gap: 7%;
     position: absolute;
     transition: transform 0.5s ease-in-out;
     height: fit-content;
     overflow: hidden;
-    padding-right: 5%;
+    left: 15%;
+    right: 15%;
 }
 
 .car_link-2 {
@@ -325,27 +325,38 @@ header {
     border-radius: 5px;
 }
 
-.bookinfo-2 {
+.bookinfo-2{
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center; 
-    width: 40%; 
+    justify-content: center;
     box-sizing: border-box;
-    overflow: hidden; 
+    overflow: hidden;
     height: 100%;
-    margin-right: 30%;
-}
-
-.bookinfo-2 h1 {
-    margin: 0;
-    font-size: 2.5em; 
-}
-
-.bookinfo-2 p {
     font-size: 1.5em; 
     white-space: normal;
     overflow: hidden;
+    color: black;
+    width: 100%;
+    margin-top: 4%;
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
+.spammable-book
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+}
+
+.spammable-book img
+{
+    aspect-ratio: 311/480;
 }
 
 #prev-2, #next-2 {
@@ -404,46 +415,6 @@ header {
 .navbutt-2.active {
     background-color: rgba(69, 69, 69, 0.786);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 footer {
