--- a/Preparation_2/categ1.css
+++ b/Preparation_2/categ1.css
@@ -3,8 +3,7 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
-    background-color: rgb(237, 196, 62);
+    background-color: white;
     padding-top: 80px;
     
 }
@@ -14,6 +13,11 @@ body {
     font-size: 300%;
     margin-bottom: 0;
     margin-top: 3%;
+}
+
+
+.background-car{
+    background-color: rgb(237, 196, 62);
 }
 
 .category {
@@ -110,6 +114,133 @@ footer {
 
 .footerlink:hover {
     text-decoration: underline;
+}
+
+
+
+
+.carousel {
+    margin: 5%;
+    margin-top: 10%;
+    padding: 4%;
+    background-color: rgb(237, 196, 62);
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+    padding-left: 13%;
+    padding-right: 13%;
+    aspect-ratio: 16/9;
+    width: 64%;
+    height: 20%;
+}
+
+.slide {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center; 
+    flex-wrap: nowrap;
+    margin-bottom: 20px;
+    width: 100%;
+    gap: 7%;
+    position: absolute;
+    transition: transform 0.5s ease-in-out;
+    height: fit-content;
+    overflow: hidden;
+    padding-right: 5%;
+    
+}
+
+.car_link {
+    width: 25%;
+    height: auto;
+}
+
+.car_picture {
+    max-width: 100%;
+    width: 100%;
+    object-fit: contain;
+    border-radius: 5px;
+}
+
+.bookinfo {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    width: 40%; 
+    box-sizing: border-box;
+    overflow: hidden; 
+    height: 100%;
+    margin-right: 30%;
+}
+
+.bookinfo h1 {
+    margin: 0;
+    font-size: 2.5em; 
+}
+
+.bookinfo p {
+    font-size: 1.5em; 
+    white-space: normal;
+    overflow: hidden;
+}
+
+#prev, #next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: white;
+    color: black;
+    font-size: 2em;
+    border: none;
+    padding: 8px;
+    cursor: pointer;
+    z-index: 10;
+    border-radius: 50%;
+    height: 60px;
+    width: 60px;
+}
+
+#prev {
+    left: 5%;
+}
+
+#next {
+    right: 5%;
+}
+
+#prev:hover, #next:hover {
+    background-color: rgb(255, 225, 128);
+}
+
+.box-navbutt {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 15px;
+    justify-content: center;
+    position: absolute; 
+    bottom: 3%;
+    left: 50%; 
+    transform: translateX(-50%); 
+    z-index: 5; 
+}
+
+.navbutt{
+    background-color: rgba(69, 69, 69, 0.321);
+    border: none;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+}
+
+.navbutt:hover {
+    background-color: rgba(69, 69, 69, 0.786);
+}
+
+.navbutt.active {
+    background-color: rgba(69, 69, 69, 0.786);
 }
 
 
