--- a/public/css/index.css
+++ b/public/css/index.css
@@ -114,6 +114,7 @@ header {
     padding-left: 60%;
     padding-right: 60%;
     border-radius: 100%;
+    cursor: pointer;
 }
 
 .carousel {
@@ -476,3 +477,40 @@ footer {
     text-decoration: underline;
 }
 
+.sidebar {
+    position: fixed;
+    top: 60px; /* Не закрива хедъра */
+    right: -300px; /* Скрито по подразбиране */
+    width: 300px;
+    height: 100vh;
+    background: #fff;
+    box-shadow: -3px 0 5px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    transition: right 0.3s ease-in-out;
+}
+
+/* Когато е активно */
+.sidebar.active {
+    right: 0;
+}
+
+/* Бутон за затваряне */
+.close-btn {
+    background: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+    float: right;
+}
+
+/* Log out бутон */
+.logout-btn {
+    width: 100%;
+    padding: 10px;
+    background: #ff4d4d;
+    color: white;
+    border: none;
+    cursor: pointer;
+    margin-top: 20px;
+    border-radius: 5px;
+}
