--- a/public/css/index.css
+++ b/public/css/index.css
@@ -566,6 +566,7 @@ footer {
     border: solid;
     border-color: #000000;
     color: white;
+    margin-left: 3%;
     cursor: pointer;
     font-size: 16px;
     text-align: center;
