--- a/public/css/categ1.css
+++ b/public/css/categ1.css
@@ -5,8 +5,20 @@ body {
     padding: 0;
     background-color: white;
     padding-top: 80px;
+   
     
 }
+
+
+.zaglavie-main{
+    background-color: rgb(237, 196, 62);
+    margin-top: 3%;
+    margin-left: 15%;
+    margin-right: 15%;
+    border-radius: 10px;
+    border: solid;
+}
+
 
 .img-size {
     width: 190px;  
@@ -24,13 +36,15 @@ body {
 .bel {
     text-align: center;
     font-size: 300%;
-    margin-bottom: 0;
-    margin-top: 3%;
+    margin-bottom: 3%;
 }
 
 
-.background-car{
-    background-color: rgb(237, 196, 62);
+.carousel-container{
+    background-color: white;
+    width: 70%;
+    margin-left: 15%;
+    margin-top: -5%;
 }
 
 .category {
@@ -38,7 +52,8 @@ body {
     justify-content: center; /* Центриране на контейнерите по хоризонтала */
     background-color: white;
     padding: 2%;
-    margin-top: 3%;
+    margin-top: -7%;
+    margin-bottom: -4%;
     flex-wrap: wrap; /* Позволява на елементите да се преместват на нов ред, ако е необходимо */
 }
 
@@ -139,7 +154,7 @@ footer {
     padding-right: 13%;
     aspect-ratio: 16/9;
     width: 64%;
-    height: 20%;
+    height: 10%;
 }
 
 .slide {
@@ -169,6 +184,7 @@ footer {
     width: 100%;
     object-fit: contain;
     border-radius: 5px;
+    margin-top: -10%;
 }
 
 .bookinfo {
@@ -176,10 +192,10 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center; 
-    width: 40%; 
+    width: 30%; 
     box-sizing: border-box;
     overflow: hidden; 
-    height: 100%;
+    height: 70%;
     margin-right: 30%;
 }
 
