speced some buttons out for yavor's sake

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -46,6 +46,11 @@ header {
     border-bottom-left-radius: 50px;
 }
 
+#LOGINBUTTON3
+{
+    margin-right: 5%;
+}
+
 #logo {
     margin-left: 4%;
 }
