--- a/public/css/index.css
+++ b/public/css/index.css
@@ -535,6 +535,7 @@ footer {
     cursor: pointer;
     font-size: 16px;
     text-align: center;
+    margin-left: 3%;
     transition: background-color 0.3s;
 }
 
