BEST LINE I'VE WRITTEN

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -82,6 +82,7 @@ header {
     margin-right: 2%;
     position: relative;
     display: inline-block;
+    margin-left: 5%;
 }
 
 .dropdown-content {
