--- a/public/css/index.css
+++ b/public/css/index.css
@@ -38,7 +38,7 @@ header {
 
 #input_box {
     padding: 0.41%;
-    font-size: 16px;
+    font-size: 1em;
     border: none;
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
@@ -46,6 +46,7 @@ header {
 }
 
 #search_icon {
+    font-size: 100%;
     padding: 0.41%;
     margin-left: 0;
     background-color: rgb(255, 255, 255);
