fixed massive text and added margin bottom to carousel

--- a/Preparation3/src/index.css
+++ b/Preparation3/src/index.css
@@ -189,7 +189,8 @@ header {
     margin-left: 25%;
     margin-right: 25%;
     width: 50%;
-    max-width: 1200px;    
+    max-width: 1200px;  
+    margin-bottom: 50px;  
 }
 
 .slide {
@@ -198,7 +199,7 @@ header {
     justify-content: space-between;
     width: 70%;
     height:max-content;
-    font-size: 2rem;
+    font-size: 1rem;
     font-weight: bold;
     text-align: center;
     opacity: 0;
