fix borislacv stojnev 3 nomer

--- a/Preparation3/frontend/src/styles/faq1.css
+++ b/Preparation3/frontend/src/styles/faq1.css
@@ -1,3 +1,9 @@
+body{
+    background: linear-gradient(135deg, #1E90FF, #FFFFFF);
+    font-family: sans-serif;
+}
+
+
 .zaglavie{
     font-size: 250%;
     text-align: center;
