--- a/Preparation3/frontend/src/styles/profile.css
+++ b/Preparation3/frontend/src/styles/profile.css
@@ -12,6 +12,7 @@ body, html {
     flex-direction: row;  
     justify-content: space-between;
     width: 100%;
+    justify-items: center;
     
 }
 
@@ -25,6 +26,7 @@ body, html {
     border-right: 1px solid #ccc;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     gap: 7%; /* Разстояние между бутоните */
+    justify-content: center;
 }
 
 .theme-button {
@@ -60,7 +62,7 @@ body, html {
     justify-content: flex-start;
     align-items: center;
     width: 25%;
-    margin-top: 0.3%;
+    margin-top: 2%;
     padding: 20px;
     border-radius: 6px;
     background-color: #bbdefb;
